test/regression/ftw/envoy.yaml
# Envoy config for CRS go-ftw regression (modsecurity-proxy-wasm).
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                http_protocol_options:
                  accept_http_10: true
                route_config:
                  virtual_hosts:
                    - name: local_route
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_server
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "modsecurity_proxy_wasm"
                        vm_config:
                          vm_id: "modsecurity_proxy_wasm_v8"
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/etc/modsecurity-proxy-wasm.wasm"
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: |
                            {
                              "directives_map": {
                                "default": [
                                  "Include @demo-conf",
                                  "SecResponseBodyMimeType text/plain text/html text/xml application/json",
                                  "SecDefaultAction \"phase:3,log,auditlog,pass\"",
                                  "SecDefaultAction \"phase:4,log,auditlog,pass\"",
                                  "SecDefaultAction \"phase:5,log,auditlog,pass\"",
                                  "SecDebugLogLevel 3",
                                  "SecAction \"id:900005,phase:1,nolog,pass,ctl:ruleEngine=DetectionOnly,ctl:ruleRemoveById=910000,setvar:tx.blocking_paranoia_level=4,setvar:tx.crs_validate_utf8_encoding=1,setvar:tx.arg_name_length=100,setvar:tx.arg_length=400,setvar:tx.total_arg_length=64000,setvar:tx.max_num_args=255,setvar:tx.max_file_size=64100,setvar:tx.combined_file_sizes=65535\"",
                                  "SecRule REQUEST_HEADERS:X-CRS-Test \"@rx ^.*$\" \"id:999999,phase:1,pass,t:none,log,msg:'X-CRS-Test marker',ctl:ruleRemoveById=1-999999\"",
                                  "SecRuleEngine On",
                                  "Include @crs-setup-conf",
                                  "Include @owasp_crs/REQUEST-901-INITIALIZATION.conf",
                                  "Include @owasp_crs/*.conf"
                                ]
                              },
                              "default_directives": "default"
                            }
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: local_server
      connect_timeout: 6000s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: local_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: albedo
                      port_value: 8080

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
